<resources>
    <string name="app_name">ClapToFind2017</string>
    <string name="actionBar_name">Home</string>
    <string name="menu_setting_name">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting_fragment">Setting fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="remove_ads">Remove ads</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="alert_mode">Alert Mode</string>
    <string name="Sound">Sound</string>
    <string name="Flash">Flash</string>
    <string name="Vibration">Vibrate</string>
    <string name="AlertSetting">Alert Settings</string>
    <string name="RingTone">Ringtone</string>
    <string name="Volume">Sensitivity</string>
    <string name="Snacbar">Go to AppInfo/Permission to enable permission</string>
    <string name="Snacbar_message">Go</string>
</resources>
