<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/gr1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:checked="true"
            android:icon="@drawable/ic_icon_home"
            android:title="@string/actionBar_name" />
    </group>
    <group
        android:id="@+id/gr2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_icon_setting"
            android:title="@string/menu_setting_name" />
    </group>
    <group
        android:id="@+id/gr3"
        android:checkableBehavior="single">
        <item
            android:title="@string/remove_ads"
            android:icon="@drawable/ic_icon_hand"/>
    </group>
    <group
        android:id="@+id/gr4"
        android:checkableBehavior="single">
        <item android:title="@string/language"
            android:icon="@drawable/ic_icon_language"/>
    </group>
    <group
        android:id="@+id/gr5"
        android:checkableBehavior="single">
        <item android:title="@string/contact_us"
            android:icon="@drawable/ic_icon_phone"/>
    </group>

</menu>